--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet">
-  </link>
-  <link href="/src/index.css" rel="stylesheet">
-  </link>
-  <title>Homework 10</title>
+  <title>Page title</title>
+  <link rel="stylesheet" href="./css/index.css" />
+
 </head>
 
 <body>
-  <select class="breed-select"></select>
-  <p class="loader"></p>
+  <form class="search-form" id="search-form">
+    <input class="form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <button class="form-button" type="submit">Search</button>
+  </form>
 
-  <div class="cat-info"></div>
+  <div class="gallery">
+    <!-- Картки зображень -->
+  </div>
 
-  <script src="index.js" type="module"></script>
+  <div class="js-intersecting-element"></div>
+
+  <!-- <button class="load" type="button">Load more</button> -->
+  <!-- ❗️❗️❗️ Add partials like so for every page -->
+  <!-- <include src="./partials/example.html"></include> -->
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
